--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,14 @@
 	"version": "0.0.2",
 	"private": true,
 	"engines": {
-		"node": "0.6.x",
+		"node": "0.8.x",
 		"npm":  "1.1.x"
 	},
 	"dependencies": {
 		"backbone": ">= 0.9.2",
 		"node-backbone": ">= 0.1.0",
 		"underscore": ">= 1.3.1",
-		"express": "2.5.8",
+		"express": ">= 2.5.8",
 		"sass": ">= 0.0.1",
 		"ejs": ">= 0.0.1"
 	}
