--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
 	},
 	"dependencies": {
 		"backbone": ">= 0.9.2",
-		"node-backbone": ">= 0.1.0",
+		"nodebone": ">= 0.1.0",
 		"underscore": ">= 1.3.1",
 		"express": ">= 2.5.8",
 		"sass": ">= 0.0.1",
